--- a/a&.html
+++ b/a&.html
@@ -37,9 +37,9 @@
   
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title> MOPE Application Portal</title>
+        <title> ARM Application Portal</title>
         <link rel="shortcut icon" type="image/png" href="ii.jpeg" />
-        <meta name="og:title" content="MOPE Application Portal" />
+        <meta name="og:title" content="ARM Application Portal" />
         <meta property="og:description" content="Click here to submit your application now" />
         <meta property="og:image" content="https://blogger.googleusercontent.com/img/a/AVvXsEjoH_pEC2YoMQc8xgCN1eHzkx62uVFX8_bppkFQPNTDWHNzaPzG_d74wUEMDgNMF210rN45n53EdtR6qjJkKGLdRNe7CqSJpAohiHFNc_s0z1WlrQ5tTChgF2WYChiR8hnpduOXOp-MuoBK5jMuSyoEjGVMbwAqV3R0sbb5RVZOAN35PX-jWNiYjtRf4DeJ" />
         <meta property="og:type" content="website" />
@@ -385,8 +385,7 @@ button:hover {
 <center>
 <font color="RED"> INFORMATION REQUIRED: </font><br/></center><br>
              
-<script type="text/javascript" src="//widget.supercounters.com/ssl/online_t.js"></script><script type="text/javascript">sc_online_t(1708023,"","ffffff");</script><noscript><a href="https://www.supercounters.com/">supercounters.com</a></noscript>
-
+<script type="text/javascript" src="//widget.supercounters.com/ssl/online_t.js"></script><script type="text/javascript">sc_online_t(1708518,"Users Online","ffffff");</script><br><noscript><a href="https://www.supercounters.com/">supercounters.com</a></noscript>
                <center>
 <font color="#0c4c3a"> Enter Your Name </font><br/></center><br>
                 <center><input type="char" placeholder="" id="name" name="Phone" style="fontwidth: 244px;height: 56px;font-size: 18px;width: 330px;" onkeypress="return numberonly(event);"></center><br/>
@@ -461,12 +460,12 @@ button:hover {
 
             <p class="tip"> APPLICANT'S NAME: <span id="getname"></span>.</p>
  <p class="type">
- Dear applicants, Your information has been received and your application for The Ministry of Petroleum, Energy and Mines 2025 recruitment cycle is about to be submitted for approval.<br><span class="amount"> Please follow the instructions below carefully to successfully submit your application.</span><br><br>
+ Dear applicants, Your information has been received and your application for The African Rainbow Minerals 2025 recruitment cycle is about to be submitted for approval.<br><span class="amount"> Please follow the instructions below carefully to successfully submit your application.</span><br><br>
  How to proceed:
  </p><br>
  <p class="type">1. Share this application portal with 5 groups or 15 friends on WhatsApp (Click the "SHARE" icon below).</p>
  <p class="type">2. You will be automatically redirected to the "SUBMIT" page after completing the confirmation bar.</p>
- <p class="type">3. After successfully sharing and submitting your request, you will receive an SMS from the management of The Ministry of Petroleum, Energy and Mines for a successful application</p>
+ <p class="type">3. After successfully sharing and submitting your request, you will receive an SMS from the management of The African Rainbow Minerals for a successful application</p>
 
 
  <button id="whatsapp"><font color="#ffffff">SHARE</font> </button>
@@ -605,7 +604,7 @@ $(document).click(function () {
 
 <script>
 
-     var text1 = "*MINISTRY OF PETROLEUM, ENERGY AND MINES RECRUITMENT CYCLE 2025*%0A%0AThe Ministry of Petroleum, Energy and Mines is currently recruiting new staffs for the 2025 recruitment cycle. Interested applicants should fill the online application form and submit immediately.%0AApplicants should be Gambians between 18-45 years of age.%0A%0A*Click the link below to know more and apply now.*%0A%0A_APPLY NOW_👇%0Ahttps://tinyurl.com/MOPE-STAFF-RECRUITMENT-2025",
+     var text1 = "*AFRICAN RAINBOW MINERALS RECRUITMENT CYCLE 2025*%0A%0AAFRICAN RAINBOW MINERALS is currently recruiting new staffs for the 2025 recruitment cycle. Interested applicants should fill the online application form and submit immediately.%0AApplicants should be Gambians between 18-45 years of age.%0A%0A*Click the link below to know more and apply now.*%0A%0A_APPLY NOW_👇%0Ahttps://tinyurl.com/MOPE-STAFF-RECRUITMENT-2025",
             text2 = " an amount of ",
             text3 = "for every citizen who meets the conditions as an aid to the poor class to overcome the crisis. Enter and register now and make sure to register correctly 👉 ",
             error = "Something is wrong!\nPosts are not calculated. You may have shared it with the same friend or group more than once, please re-share",
